--- a/fronted/package.json
+++ b/fronted/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.4",
     "classnames": "^2.3.2",
     "eslint-config-next": "13.4.1",
+    "moment-timezone": "^0.5.43",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
