--- a/fronted/package.json
+++ b/fronted/package.json
@@ -22,7 +22,9 @@
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "slate": "0.94.1",
+    "slate-react": "0.96.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.2",
